--- a/pg_monz/zabbix_agentd.d/userparameter_pgsql.conf
+++ b/pg_monz/zabbix_agentd.d/userparameter_pgsql.conf
@@ -28,7 +28,7 @@ UserParameter=psql.standby_server[*],"$1"/pgsql_standby.sh "$2"
 # $8: DB table name  (only for LLD)
 #-------------------------------------------------------------------------------
 UserParameter=pgsql.get.pg.transactions[*],"$1"/pgsql_server_funcs.sh pg.transactions "$2" "$3" "$4"
-UserParameter=pgsql.get.pg.bgwriter[*],"$1"/pgsql_server_funcs.sh pg.bgwriter $2 "$3" "$4"
+UserParameter=pgsql.get.pg.bgwriter[*],"$1"/pgsql_server_funcs.sh pg.bgwriter "$2" "$3" "$4"
 UserParameter=pgsql.get.pg.slow_query[*],"$1"/pgsql_server_funcs.sh pg.slow_query "$2" "$3" "$4" "$5"
 UserParameter=pgsql.get.pg.stat_database[*],"$1"/pgsql_db_funcs.sh pg.stat_database "$2" "$3" "$4" "$5"
 UserParameter=pgsql.get.pg.size[*],"$1"/pgsql_userdb_funcs.sh pg.size "$2" "$3" "$4" "$5"
@@ -57,4 +57,4 @@ UserParameter=pgpool.running[*],"$1"/pgpool_simple.sh "$2"
 UserParameter=pgpool.have_delegate_ip[*],"$1"/pgpool_delegate_ip.sh "$2"
 UserParameter=pgpool.get.nodes[*],"$1"/pgpool_backend_status.sh pgpool.nodes "$2" "$3" "$4"
 UserParameter=pgpool.get.connections[*],"$1"/pgpool_connections.sh pgpool.connections "$2" "$3" "$4"
-UserParameter=pgpool.get.cache[*],"$1"/pgpool_cache.sh pgpool.cache $2 "$3" "$4"
+UserParameter=pgpool.get.cache[*],"$1"/pgpool_cache.sh pgpool.cache "$2" "$3" "$4"
